--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,42 @@
 version: '3.8'
+
 services:
+  jenkins:
+    build:
+      context: ./jenkins
+    container_name: jenkins
+    ports:
+      - "8080:8080"       # Jenkins UI
+      - "50000:50000"     # Agent kết nối
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    user: root            # Cho phép cài đặt docker trong container
+    restart: unless-stopped
+
   web:
-    build: .
+    build:
+      context: .
+    container_name: flask_web
     ports:
       - "5000:5000"
     depends_on:
       - db
+    restart: unless-stopped
+
   db:
     image: mysql:8
+    container_name: flask_db
     environment:
       MYSQL_ROOT_PASSWORD: 123456
       MYSQL_DATABASE: flaskdb
     ports:
       - "3307:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+    restart: unless-stopped
+
+volumes:
+  jenkins_home:
+  db_data:
+
