--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   jenkins:
     build:
       context: ./jenkins
-    container_name: jenkins
+    container_name: jenkins_app
     ports:
       - "8080:8080"       # Jenkins UI
       - "50000:50000"     # Agent kết nối
